--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,9 @@ spring:
       routes[0]:
         id: users-status-check
         uri: lb://demo-resource-server
-        predicates[0]: Path=/users/status/check
+        predicates[0]: Path=/users/status/git ad .
+        git commit -m "connit
+        "check
         predicates[1]: Method=GET
         filter[0]: RemoveRequestHeader=Cookie
       routes[1]:
